# LyndsayUI

./: .gitattributes  .gitignore  CMakeLists.txt  LICENCE  Makefile  README.md  Required_Dirs.cmake  Rixin.cmake  SDLDirs.cmake  build-lyndsay.sh  setup-dev.sh
fonts/: LICENSE.txt
help-scripts/: shader-compactor.py
include/: AddShaderEvent.h  BufferImageEvent.h  BufferedImage.h  Colour.h  Constants.h  Curves.h  DrawFunc.h  DrawHelper.h  DrawManager.h  DrawableCollection.h  EventBase.h  EventDispatcher.h  EventFactory.h  EventProcessor.h  EventQueue.h  EventTypes.h  Events.h  GlGraphics.h  IDrawable.h  IEvent.h  IEventFactory.h  IEventManager.h  IEventProcessor.h  IEventQueue.h  IGraphics.h  IIndexResolver.h  ILyndsayDependencyFactory.h  IMappableIndexResolver.h  IOSSpecificFunctions.h  IUpdateable.h  IWindow.h  IWindowManager.h  ImageReference.h  KeyValues.h  Line.h  LineConverter.h  LinuxSpecificFunctions.h  LyndsayUI.h  LyndsayUIContext.h  MappedIndexResolver.h  (+30 more)
include/Controls/: Button.h  ControlCollection.h  IControl.h  IControlCollection.h  Label.h  Textbox.h
include/Custom/: MckaylaWindow.h
include/Drawing/: BasicShaders.h  BufferImageEvent.h  BufferedImage.h  Colour.h  Colours.h  DrawFunc.h  DrawableBase.h  DrawableCollection.h  FreetypeTextRenderer.h  GlBufferData.h  GlGraphics.h  IDrawable.h  IGraphics.h  ITextRenderer.h  Image.h  ImageData.h  ImageReference.h  PathDrawer.h  TransformParams.h
include/Event/: AbstractWindowEventManager.h  Event.h  (+42 more)
notes/: Events.md
shaders/: fragment-color.glsl  fragment-notex.glsl  fragment-tex.glsl  fragment.glsl  vertex-notex.glsl  vertex-tex.glsl  vertex.glsl
src/: DrawHelper.cpp  DrawManager.cpp  EventDispatcher.cpp  EventFactory.cpp  EventProcessor.cpp  EventQueue.cpp  EventTestEvent.cpp  GlGraphics.cpp  Image.cpp  LinuxSpecificFunctions.cpp  LyndsayUI.cpp  RebeccaImgTest.cpp  RebeccaUI.cpp  RixinSDL.cpp  SDLEventManager.cpp  SDLLyndsayDependencyFactory.cpp  ShaderUtils.cpp  SingleWindow.cpp  TextureRepository.cpp  Utilities.cpp  Utils.cpp  Window.cpp  WindowDrawManager.cpp  WindowManager.cpp  WindowsSpecificFunctions.cpp  glad.c  main.cpp  mckayla.cpp  promise.cpp  spiral.cpp
test-program/: MyRect.h  MyWin.h  main.cpp
(+70 files in other folders)
